--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,10 +21,6 @@ jobs:
       with: 
         submodules: recursive
 
-    - name: Get current time
-      uses: gerred/actions/current-time@master
-      id: current-time
-
     - name: Setup Java JDK
       uses: actions/setup-java@v1.4.3
       with:
@@ -33,22 +29,35 @@ jobs:
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
 
+    # Because waiting for the Docker image to be built is kinda boring not gonna lie
+    - name: Cache Docker image
+      id: cache-docker-image
+      uses: actions/cache@v2
+      with:
+        path: docker
+        key: docker-image-${{ runner.os }}-${{ hashFiles('docker/Dockerfile') }}
+
     - name: Build base Docker image
+      if: steps.cache-docker-image.outputs.cache-hit != 'true'
       run: |
         cd docker
         bash build.sh
 
-    # Runs a single command using the runners shell
     - name: Build with Gradle
-      run: "./gradlew build -Dgithub.build.id=$GITHUB_RUN_ID -Dbuild.number=$GITHUB_RUN_NUMBER -Dgit.branch=$GITHUB_REF -Dcommit.hash=$GITHUB_SHA -Dcompiled.at=${{ steps.current-time.outputs.time }}"
+      uses: gradle/gradle-build-action@v2
+      with:
+        arguments: build
 
     - name: Publish to PerfectDreams' repository
       if: github.ref == 'refs/heads/main'
+      uses: gradle/gradle-build-action@v2
       env:
-        USERNAME: ${{ secrets.PERFECTDREAMS_REPO_USERNAME }}
-        PASSWORD: ${{ secrets.PERFECTDREAMS_REPO_PASSWORD }}
-      run: "./gradlew publish -DUSERNAME=$USERNAME -DPASSWORD=$PASSWORD"
+        ORG_GRADLE_PROJECT_PerfectDreamsUsername: ${{ secrets.PERFECTDREAMS_REPO_USERNAME }}
+        ORG_GRADLE_PROJECT_PerfectDreamsPassword: ${{ secrets.PERFECTDREAMS_REPO_PASSWORD }}
+      with:
+        arguments: "publish"
 
     - name: Publish to Docker
-      if: github.ref == 'refs/heads/main'
-      run: "./gradlew :server:jib -Dgithub.build.id=$GITHUB_RUN_ID -Dbuild.number=$GITHUB_RUN_NUMBER -Dgit.branch=$GITHUB_REF -Dcommit.hash=$GITHUB_SHA -Dcompiled.at=${{ steps.current-time.outputs.time }}"
+      uses: gradle/gradle-build-action@v2
+      with:
+        arguments: ":server:jib"
